styles.css
/* ... */
.close-fullview-btn svg {
  fill: var(--color-pale-orange);
  transition: fill 300ms;
}
.close-fullview-btn:hover svg {
  fill: var(--color-orange);
}

.message-description {
  position: fixed;
  top: var(--space-2);
  left: 50%;
  transform: translateX(-50%);
  padding: 0.5rem var(--space-1);
  background-color: var(--color-white);
  box-shadow: 0 2px 5px var(--color-black-opace);
  border-radius: var(--btn-border-radius);
  border-top-left-radius: 0;
  z-index: var(--z-100);
  display: flex;
  gap: 0.5rem;
  align-items: start;
  animation: showMessage 3s ease forwards;
}

@keyframes showMessage {
  0% {
    opacity: 0;
    transform: translateX(-50%) translateY(-1rem);
  }

  15% {
    opacity: 1;
    transform: translateX(-50%) translateY(0rem);
  }

  85% {
    opacity: 1;
    transform: translateX(-50%) translateY(0rem);
  }

  100% {
    opacity: 0;
    transform: translateX(-50%) translateY(0px);
  }
}

/* ===================================
                Media queries    
   ===================================*/

/* 450vw */
@media screen and (min-width: 28.125rem) {
  .product-image {
    border-radius: var(--btn-border-radius);
  }

  .header {
    padding: clamp(var(--space-1o5), 5vw, var(--space-2));
  }

  .header-left {
    gap: clamp(var(--space-1), 5vw, 2.5rem);
  }
}

/* 900vw */
@media screen and (min-width: 56.25rem) {
  body {
    padding-inline: clamp(var(--space-2), 5vw, var(--space-4));
  }

  .nav-btn {
    display: none;
  }

  .header {
    padding: 0;
    border-bottom: 1px solid var(--color-light-gray);
  }

  .primary-nav {
    position: static;
    background-color: none;
    height: auto;
    width: auto;
    max-width: unset;
    z-index: var(--z-1);
    padding: 0;
  }

  .primary-nav ul {
    display: flex;
    flex-direction: row;
    padding: 0;
    gap: var(--space-2);
  }

  .primary-nav a {
    display: block;
    padding-block: 2.3rem;
    color: var(--color-gray);
    border-bottom: 3px solid transparent;
    font-weight: var(--fw-400);
    transition: border 0.2s ease;
  }

  .primary-nav a:hover {
    border-bottom: 3px solid var(--color-orange);
    color: var(--color-black);
  }

  .product {
    display: grid;
    place-items: center;
    grid-template-columns: repeat(2, 1fr);
    gap: clamp(var(--space-2), 5vw, var(--space-4));
    max-width: var(--max-layout-width);
    margin-inline: auto;
    padding-block: clamp(var(--space-3), 6vw, var(--space-5));
  }

  .product-image {
    aspect-ratio: 40/41;
  }

  .action-btns {
    display: none;
  }
  .product-full-view .action-btns {
    display: flex;
  }

  .thumbnail-list {
    display: flex;
    justify-content: space-between;
    align-items: center;
    max-width: var(--product-image-max-width);
    gap: var(--space-1o5);
    padding-block-start: clamp(var(--space-1), 3vw, var(--space-2));
  }

  .thumbnail-btn {
    width: clamp(var(--space-5), 8vw, 5.5rem);
    aspect-ratio: 1;
    border-radius: var(--btn-border-radius);
    overflow: hidden;
    background-color: var(--color-white);
  }

  .thumbnail-btn img {
    object-fit: cover;
    transition: var(--transition-img);
  }

  .thumbnail-btn:hover img {
    filter: opacity(0.5);
    transform: scale(1.05);
  }

  .thumbnail-btn.selected {
    outline: 3px solid var(--color-orange);
  }

  .thumbnail-btn.selected img {
    filter: opacity(0.7);
    transform: scale(1.05);
  }

  .thumbnail-list-fullview {
    width: fit-content;
    margin-inline: auto;
  }

  .product-details {
    justify-self: start;
    max-width: calc(28.125rem + var(--space-1o5));
    margin: unset;
    padding: 0;
    display: flex;
    flex-direction: column;
    gap: clamp(var(--space-1), 3vw, var(--space-2));
  }

  .heading {
    font-size: clamp(
      var(--font-heading-size),
      3.5vw,
      var(--font-heading-size-lg)
    );
  }

  .pricing {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: unset;
  }

  .old-price {
    margin-left: 0;
  }

  .quantity-form {
    display: grid;
    grid-template-columns: 1fr 2fr;
    gap: var(--space-1);
  }
}

